--- a/thesis/notation.tex
+++ b/thesis/notation.tex
@@ -55,6 +55,8 @@
     \(i\)-th argument.
   \item[{\jlinlfont f(x) = rand(x)}] Julia code (including identifiers mention in the text) is
     always typeset in typewriter font.
+  \item[{\irtrackerjl{}}] Julia packages are set in the same font as Julia code.  In the electronic
+    version, a hyperlink to their source code on Github is automatically added.
   \end{description}
 \end{symbolicfootnotes}
 
