--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -503,6 +503,14 @@
   langid = {english}
 }
 
+@misc{gabler2020mcmc,
+  title = {{{MCMC}} Simulation Data for {{AutoGibbs}}.Jl Benchmarks},
+  author = {Gabler, Philipp},
+  date = {2020-12},
+  doi = {10.5281/zenodo.4307916},
+  url = {https://doi.org/10.5281/zenodo.4307916}
+}
+
 @article{gansner2000open,
   title = {An Open Graph Visualization System and Its Applications to Software Engineering},
   author = {Gansner, Emden R and North, Stephen C},
