Add experiment verbal descriptions

--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -480,6 +480,16 @@
   primaryClass = {cs}
 }
 
+@software{feng2020chifeng,
+  title = {Chi-Feng/Mcmc-Demo},
+  author = {Feng, Chi},
+  date = {2020-11-22T10:52:42Z},
+  origdate = {2016-02-23T00:14:17Z},
+  url = {https://github.com/chi-feng/mcmc-demo},
+  urldate = {2020-11-22},
+  abstract = {Interactive Markov-chain Monte Carlo Javascript demos}
+}
+
 @article{fritz2020synthetic,
   title = {A Synthetic Approach to {{Markov}} Kernels, Conditional Independence and Theorems on Sufficient Statistics},
   author = {Fritz, Tobias},
